# launchpad

./: .cursorrules  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Common  DEVELOPMENT.md  Dockerfile  Makefile  Package.swift  README.md  SETUP_COMPLETE.md  VSCODE_DEBUGGING.md  VSCode_SETUP.md  app-size-analyzer.code-workspace  cloudbuild.ci.yaml  cloudbuild.yaml  codecov.yml  coverage.xml  docker-compose.yml  env.local.example  hackernews_treemap.json  launchpad.code-workspace  leak.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_zip_provider_fix.py
.cursor/rules/: app_size_analyzer.mdc  launchpad.mdc  overview.mdc
.devenv/: sync.py
.github/workflows/: ci.yml  ghcr-image-upload.yml  image.yml  release.yml  security.yml  validate-pipelines.yml
.tasks/: README.md  ios-port-acceptance-criteria.md  ios-port-checklist.md
Sources/AppAnalyzer/: main.swift
config/hooks/: post-merge
devenv/: config.ini  sync.py
devservices/: config.yml
gocd/pipelines/: launchpad.yaml
gocd/templates/: launchpad.jsonnet
gocd/templates/bash/: deploy.sh
gocd/templates/pipelines/: launchpad.libsonnet
legacy/artifacts/: package.json
legacy/artifacts/src/: Artifact.ts
legacy/artifacts/src/android/: Aab.ts  Apk.ts
legacy/artifacts/src/ios/: ZippedApp.ts  ZippedXCArchive.ts  ZippedXCFramework.ts
legacy/artifacts/src/parsers/: BufferWrapper.ts
legacy/artifacts/src/providers/: NormalizedZipProvider.ts  ZipProvider.ts
legacy/artifacts/src/utils/: stringify.ts
legacy/artifacts/test/android/: Aab.test.ts  Apk.test.ts
legacy/artifacts/test/ios/: ZippedApp.test.ts  ZippedXCArchive.test.ts  ZippedXCFramework.test.ts
legacy/ios/sizeAnalysis/: .gitignore  .swift-format  README.md
legacy/ios/sizeAnalysis/CLI/: Package.resolved  Package.swift
legacy/sizeAnalysis/CLI/: .gitignore
scripts/: compare_with_ios_reference.py  create-manifest.sh  debug_range_mapping.py  deps  ensure_kafka_topics.py  generate_treemap_demo.py  test_artifact_size_analysis_upload.py  test_artifact_update.py  test_download_artifact.py  test_image_optimization.py  test_kafka.py
src/app_size_analyzer/: __init__.py  cli.py
src/app_size_analyzer/analyzers/: __init__.py  android.py  ios.py  macho_parser.py  range_mapping_builder.py
src/app_size_analyzer/models/: __init__.py  android.py  common.py  ios.py  range_mapping.py  results.py
src/app_size_analyzer/utils/: __init__.py  file_utils.py  logging.py
src/launchpad/: __init__.py  __main__.py  app.py  cli.py  constants.py  kafka.py  sentry_client.py  sentry_sdk_init.py  server.py  service.py  settings.py
src/launchpad/analyzers/: __init__.py  android.py  apple.py  ios.py  macho_parser.py  range_mapping_builder.py  swift_metadata_parser.py
src/launchpad/api/: update_api_models.py
src/launchpad/artifacts/: __init__.py  artifact.py  artifact_factory.py
src/launchpad/artifacts/android/: aab.py  apk.py  zipped_aab.py  zipped_apk.py
src/launchpad/artifacts/apple/: zipped_xcarchive.py
src/launchpad/artifacts/ios/: zipped_xcarchive.py
src/launchpad/artifacts/providers/: zip_provider.py
src/launchpad/insights/: common.py  insight.py  webp_asset.py
src/launchpad/insights/android/: image_optimization.py
src/launchpad/models/: __init__.py  analysis.py  android.py  apple.py  artifacts.py  common.py  insights.py  ios.py  range_mapping.py  treemap.py
src/launchpad/parsers/: __init__.py  buffer_wrapper.py
src/launchpad/parsers/android/: android_binary_parser.py  types.py
src/launchpad/parsers/apple/: binary_analyzer.py  binary_utils.py  macho_parser.py  (+9 more)
src/launchpad/services/: __init__.py  analysis.py
src/launchpad/size/: __init__.py  analysis.py  cli.py  constants.py  runner.py
src/launchpad/utils/: __init__.py  analysis.py  artifact_analyzer.py  code_signature_validator.py  cwl_demangle.py  file_utils.py  logging.py  performance.py  range_mapping_builder.py  statsd.py  swift_demangle.py  treemap_builder.py
tests/: __init__.py  conftest.py  test_basic.py  test_integration.py  test_service.py
tests/_fixtures/hermes/: test.hbc
tests/_fixtures/ios/: hackernews-results.json
tests/integration/: test_cwl_demangle.py  test_dex_element_builder_integration.py  test_image_optimization_insight.py  test_image_optimization_integration.py  test_ios_range_mapping.py  test_ipa.py  test_large_audio_file_insight_integration.py  test_large_file_insight_integration.py  test_macho_parser.py  test_swift_demangle.py  test_swift_metadata_parsing.py  test_swift_protocol_conformance.py  test_symbol_type_aggregator.py  test_treemap_generation.py  test_webp_asset_integration.py  test_webp_optimization_integration.py
tests/integration/size/: test_analysis.py  test_heif_optimization_integration.py  test_hermes_size_reporter.py  test_ios_component_analysis.py  test_ios_range_mapping.py  test_runner.py  test_strip_symbols_insight.py  test_symbol_type_aggregator.py  test_treemap_generation.py
tests/models/: test_artifacts.py
tests/unit/: test_android_analyzer.py  test_apple_basic_info.py  test_cli.py  test_dex_element_builder.py  test_dex_mapping.py  test_hermes_debug_info_insight.py  test_image_optimization_insight.py  test_ios_range_mapping_integration.py  test_large_audio_file_insight.py  test_large_file_insight.py  test_large_video_file_insight.py  test_localized_strings_insight.py  test_loose_images_insight.py  test_models.py  test_objc_symbol_type_aggregator.py  test_performance.py  test_range_mapping.py  test_raw_images_insight.py  test_sentry_client_retry.py  test_service.py  test_service_error_handling.py  test_small_files_insight.py  test_strip_symbols_insight.py  test_symbol_type_aggregator.py  test_webp_asset_insight.py
tests/unit/artifacts/: test_artifact_factory.py
tests/utils/: test_artifact_analyzer.py
web/: README.md  index.html  package-lock.json  package.json
web/public/: sample-data.json  treemap-sample.json
web/src/: App.css  App.tsx  index.css
web/src/components/: AppInfoDisplay.tsx  FileUpload.tsx  TreemapVisualization.tsx
web/src/types/: treemap.ts
web/src/utils/: dataConverter.ts
(+160 files in other folders)
