[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpad"
version = "1.0.0"
description = "CLI tool for analyzing iOS and Android app bundle sizes"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sentry Team", email = "engineering@sentry.io"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
launchpad = "launchpad.cli:main"

[project.urls]
Repository = "https://github.com/getsentry/launchpad"
Issues = "https://github.com/getsentry/launchpad/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) by default
select = ["E", "F", "I"]
ignore = ["E501", "E731"]

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ty]
src = { include = ["src/"], exclude = [], root = ".", respect-ignore-files = true }

[tool.ty.environment]
python = "/usr/local/bin/python"
extra-paths = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--strict-config",
]
