[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpad"
version = "1.0.0"
description = "CLI tool for analyzing iOS and Android app bundle sizes"
readme = "README.md"
# Update to "FSL-1.1-ALv2" once the next version of SPDX comes out,
# see: https://github.com/spdx/license-list-XML/issues/2459
license-files = ["LICENSE"]
authors = [
    {name = "Sentry Team", email = "engineering@sentry.io"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving",
]
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
launchpad = "launchpad.cli:main"

[project.urls]
Repository = "https://github.com/getsentry/launchpad"
Issues = "https://github.com/getsentry/launchpad/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), and isort (I) by default
select = ["E", "F", "I"]
ignore = ["E501", "E731"]

[tool.ruff.format]
# Use black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["S101", "PLR2004"]
"src/launchpad/artifacts/android/resources/protos/**/*" = ["E", "F", "I", "N", "UP", "ARG", "SIM", "TCH", "TID", "Q", "RSE", "RET", "SLF", "SLOT", "PIE", "T20", "PYI", "PT", "YTT", "BLE", "FBT", "A", "COM", "C90", "DTZ", "ISC", "G", "INP", "PTH", "AIR", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "S"]

[tool.ty]
src = { include = ["src/"], exclude = ["src/launchpad/artifacts/android/resources/protos/**/*"], root = ".", respect-ignore-files = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=auto",
    "--maxfail=10",
    "--durations=10",
    "--color=yes",
    "--assert=plain",
    "--html=test-report.html",
    "--self-contained-html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "cli: CLI functionality tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
